Mejorando unas cosas

--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -476,7 +476,7 @@
     color: #f6ff00;
   }
   .cid-ux3LumNri2 .mbr-desc {
-    color: #ffffff;
+    color: #000000;
     text-align: center;
   }
   .cid-ux3LumNri2 .mbr-text,
@@ -1368,7 +1368,7 @@
     justify-content: center;
   }
   .cid-ux3Lun9GfK .card-title {
-    color: #ffffff;
+    color: #000000;
   }
   .cid-ux3Lun9GfK .card-desc {
     color: #616161;
@@ -2377,7 +2377,7 @@
 
 .footer-bg
 {
-  background: #cdf0d5;
+  background: #669bbc;
 }
 
 /*BARRA NAVEGACION DISPOSITIVOS PEQUENOS*/
