--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -2029,27 +2029,8 @@
   .cid-ux3Lund8Wv .mbr-section-btn {
     text-align: center;
   }
-  
-  .cid-ux3LuneBZT {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    background-color: #ffffff;
-  }
-  .cid-ux3LuneBZT .mbr-fallback-image.disabled {
-    display: none;
-  }
-  .cid-ux3LuneBZT .mbr-fallback-image {
-    display: block;
-    background-size: cover;
-    background-position: center center;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-  }
-  .cid-ux3LuneBZT .container-fluid {
-    padding: 0 75px;
-  }
+
+  /*Siguenos*/
   @media (max-width: 768px) {
     .cid-ux3LuneBZT .container-fluid {
       padding: 0 20px;
@@ -2071,9 +2052,6 @@
       margin-bottom: 40px;
     }
   }
-  .cid-ux3LuneBZT .title-wrapper .mbr-section-title {
-    margin-bottom: 32px;
-  }
   @media (max-width: 992px) {
     .cid-ux3LuneBZT .title-wrapper .mbr-section-title {
       margin-bottom: 40px;
@@ -2083,7 +2061,7 @@
     margin-bottom: 0;
   }
   .cid-ux3LuneBZT .list-wrapper {
-    margin-bottom: 150px;
+    margin-bottom: 5pc;
   }
   @media (max-width: 992px) {
     .cid-ux3LuneBZT .list-wrapper {
@@ -2142,11 +2120,6 @@
   }
   .cid-ux3LuneBZT .content-wrapper .social-wrapper .soc-item a {
     display: block;
-  }
-  .cid-ux3LuneBZT .content-wrapper .social-wrapper .soc-item a:hover .mbr-iconfont,
-  .cid-ux3LuneBZT .content-wrapper .social-wrapper .soc-item a:hover .mbr-iconfont {
-    background-color: #000000;
-    color: #ffffff;
   }
   .cid-ux3LuneBZT .content-wrapper .social-wrapper .soc-item a .mbr-iconfont {
     display: flex;
